PR/50312: Robert Elz: Unconditionally include <sys/exec.h> to fix compilation when PAX_ASLR is not defined.